Version 2.5.17dev:

* Removed audio_buffer_target_bytes (use audio_buffer_target_size instead).
* Changes to audio buffer fill logic.
* Measure fps internally with floating point numbers.
* Fixed cyberstormppc.rom lookup when using FS-UAE config file.
* Fixed ISO-8859-1 <-> UTF-8 conversion (broke in 2.5.15dev).
* Updated emulation core from WinUAE 2900b17.

Version 2.5.16dev:

* Fixed legacy uaegfx_card option.
* Make sure early configuration warning messages are displayed in GUI.
* Fixed parsing of memory options.
* Fixed infinite loop when more than one HDF/CD was used with UAE controller.
* Fix for A1000 boot issue with full kickstart ROM.
* Fixed patching of Cloanto A500/A4000 roms (broke in an earlier dev ver).
* Specify rpath for OS X executable (so plugins can find libs from fs-uae).

Version 2.5.15dev:

* FS-UAE memory options are more clever, and can take arguments as both
  KB or MB (with recommended explicit K/M suffix). For example, for memory
  options which are always in MB, 8M == 8192K == 8192 == 8.
* Flexible value matching for choice-based FS-UAE configuration options
  (i.e. cyberstorm-ppc == CyberStormPPC)
* New model A4000/PPC (auto-enables CyberStorm PPC).
* New model A4000/OS4 (CyberStorm PPC, Picasso IV, default to onboard SCSI).
* New options graphics_card and graphics_card_memory (supercedes uaegfx_card).
* New options accelerator, accelerator_rom, graphics_card_rom.
* New --workbench option useful for command line testing (automatically
  inserts an appropriate wb disk in DF0).
* Show GUI warning when floppy_drive_x files are not found.
* Enabled A500/512K model (same as A500 but without slow RAM).
* Enabled A4000 model (68030, 3.1 ROM, 2MB Chip + 8 MB Fast).
* Added .bin extension to internal FS-UAE rom scanner.
* More code cleanup / fixes, reduces compiler warnings.
* Enabled floating point control.
* Updated emulation core from WinUAE 2900b16.
* Fixed bug when adding 2nd fast memory bank in non-autoconfig mode.