@@ -1,0 +1,15 @@
+#ifndef FS_EMU_HACKS_H
+#define FS_EMU_HACKS_H
+
+/* These variables should ideally be hidden, and a proper API designed
+ * instead. */
+
+extern int fs_emu_mouse_absolute_x;
+extern int fs_emu_mouse_absolute_y;
+
+extern double fs_emu_video_scale_x;
+extern double fs_emu_video_scale_y;
+extern double fs_emu_video_offset_x;
+extern double fs_emu_video_offset_y;
+
+#endif /* FS_EMU_HACKS_H */
