@@ -1,0 +1,6 @@
+#ifndef FS_EMU_OPTIONS_H
+#define FS_EMU_OPTIONS_H
+
+#include <fs/ml/options.h>
+
+#endif /* FS_EMU_OPTIONS_H */
