@@ -22,6 +22,7 @@
 #include <fs/malloc.h>
 #include <fs/base.h>
 #include <stdint.h>
+#include <stdbool.h>
 
 //#include <fs/ml/opengl.h>
 
@@ -44,6 +45,8 @@ typedef struct fs_ml_video_mode {
 } fs_ml_video_mode;
 
 void fs_ml_show_cursor(int show, int immediate);
+bool fs_ml_mouse_integration(void);
+bool fs_ml_cursor_allowed(void);
 int fs_ml_has_automatic_input_grab();
 void fs_ml_grab_input(int grab, int immediate);
 
@@ -306,6 +309,8 @@ fs_ml_input_device *fs_ml_get_input_devices(int* count);
 #define FS_ML_BUTTON_RIGHT     3
 #define FS_ML_BUTTON_WHEELUP   4
 #define FS_ML_BUTTON_WHEELDOWN 5
+
+#define FS_ML_NO_ABSOLUTE_MOUSE_POS 0xffff
 
 typedef enum {
     FS_ML_KEY_UNKNOWN        = 0,
