@@ -1,0 +1,11 @@
+#ifndef FS_ML_OPTIONS_H
+#define FS_ML_OPTIONS_H
+
+#define OPTION_CURSOR "cursor"
+#define OPTION_MOUSE_INTEGRATION "mouse_integration"
+
+/* Deprecated options */
+
+//
+
+#endif /* FS_ML_OPTIONS_H */
