@@ -395,10 +395,10 @@ void fs_emu_video_after_update() {
     fs_emu_video_buffer_unlock();
     int64_t t = fs_emu_monotonic_time();
 
-    if (fs_emu_pointer_is_visible_to() > 0) {
-        if (fs_emu_pointer_is_visible_to() < fs_emu_monotonic_time()) {
+    if (fs_emu_cursor_is_visible_to() > 0) {
+        if (fs_emu_cursor_is_visible_to() < fs_emu_monotonic_time()) {
             //fs_log("%lld\n", fs_emu_monotonic_time());
-            fs_emu_show_pointer(0);
+            fs_emu_show_cursor(0);
         }
     }
 
